# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  check.sh  format.sh  frontend-changes.md  pyproject.toml
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: __init__.py  conftest.py  test_app.py  test_rag_system.py  test_session_manager.py
docs/: how_to_run_sn.md  outline_sn.md  pipeline_sn.md  query_flow_diagram.md  query_flow_sn.md
frontend/: index.html  script.js  style.css
